# repligit

./: .coverage  .envrc  .gitignore  README.md  d  pyproject.toml  spack.yaml
.github/workflows/: ci.yml  coverage.yml  publish.yml  save-base-coverage.yml  save-trunk-coverage.yml  security.yml  style.yml  unit-tests.yml
.github/workflows/requirements/: publish.txt  style.txt  unit-tests.txt
examples/: git_mirror.py  git_mirror_async.py
spack/: spack.yaml
src/repligit/: __init__.py  client.py  parse.py  repligit.py  util.py
src/repligit/asyncio/: __init__.py  client.py  parse.py  util.py
tests/: test_repligit.py
